--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,13 +3,21 @@
 .promo {
   background-color: $blue-click-color;
 
-  background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-mobile.jpg");
+  background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-mobile@1x.jpg");
   background-size: auto, cover;
   background-position: bottom -1px center, top center;
   background-repeat: no-repeat, no-repeat;
 
+  @media (min-resolution: $retina-dppx) {
+    background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-mobile@2x.jpg");
+  }
+
   &--inner {
-    background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile.jpg");
+    background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile@1x.jpg");
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile@2x.jpg");
+    }
   }
 }
 
@@ -26,10 +34,18 @@
 
 @media (min-width: $tablet-width) {
   .promo {
-    background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-desktop.jpg");
+    background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-desktop@1x.jpg");
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-desktop@2x.jpg");
+    }
 
     &--inner {
-      background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-desktop.jpg");
+      background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-desktop@1x.jpg");
+
+      @media (min-resolution: $retina-dppx) {
+        background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-desktop@2x.jpg");
+      }
     }
   }
 
