Делает мобильное меню по умолчанию закрытым, редактирует поведение меню в потоке, чтобы избежать перестроения элементов при открытии/закрытии меню

--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,5 +1,9 @@
+@use "mixins.scss";
+
 .logo__image {
+  @include image-size;
   width: 185px;
   height: 96px;
   vertical-align: bottom;
+  object-fit: contain;
 }
