--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,8 +1,18 @@
 @use "mixins.scss";
 
 .modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  background-color: $black-30-color;
+}
+
+.modal__wrapper {
   @include container;
-  // position: absolute;
+  position: fixed;
   background-color: $white-color;
 }
 
@@ -12,7 +22,11 @@
   margin-bottom: 0;
 }
 
-.modal--warning {
+.modal__wrapper--warning {
+  top: 116px;
+  left: 50%;
+  transform: translateX(-50%);
+
   & .modal__title {
     padding: 45px 42px 30px;
   }
@@ -28,12 +42,16 @@
   }
 }
 
-.modal__wrapper {
+.modal__box {
   padding: 20px;
   background-color: $grey-form-color;
 }
 
-.modal--information {
+.modal__wrapper--information {
+  top: 402px;
+  left: 50%;
+  transform: translateX(-50%);
+
   & .modal__title {
     padding: 39px 38px 30px;
   }
@@ -49,12 +67,32 @@
   }
 }
 
+.modal--opened {
+  display: block;
+}
+
+.modal--closed {
+  display: none;
+}
+
 @media (min-width: $tablet-width) {
-  .modal--warning {
+  .modal__wrapper--warning {
+    top: 283px;
     width: 400px;
   }
 
-  .modal--information {
+  .modal__wrapper--information {
+    top: 162px;
     width: 640px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .modal__wrapper--warning {
+    top: 244px;
+  }
+
+  .modal__wrapper--information {
+    top: 145px;
   }
 }
