--- a/6/css/style.css
+++ b/6/css/style.css
@@ -642,13 +642,11 @@
 .form__text-field:hover {
   background-color: #e5e5e5;
 }
-.form__text-field:hover::placeholder {
-  color: #000000;
-}
 .form__text-field:focus {
   background-color: transparent;
   color: #000000;
   outline: 4px solid #e5e5e5;
+  outline-offset: -4px;
 }
 
 .form__tel-field {
@@ -718,6 +716,9 @@
 .form__label-radio:active::before {
   background-color: #d5d5d5;
 }
+.form__radio-field:focus + .form__label-radio::before {
+  outline: 2px solid #81b3d2;
+}
 .form__radio-field:checked + .form__label-radio::after {
   position: absolute;
   content: "";
@@ -747,6 +748,9 @@
 }
 .form__label-checkbox:active::before {
   background-color: #d5d5d5;
+}
+.form__checkbox:focus + .form__label-checkbox::before {
+  outline: 2px solid #81b3d2;
 }
 .form__checkbox:checked + .form__label-checkbox::after {
   position: absolute;
@@ -1094,34 +1098,25 @@
     display: none;
   }
 
-  .main-nav--closed .page-header__promo {
-    margin-top: -40px;
-  }
-
-  .main-nav--opened .main-nav__logo {
-    display: none;
-  }
-
   .main-nav--opened .main-nav__list {
     position: absolute;
+    top: 0;
     width: 100%;
   }
 
-  .main-nav--opened .page-header__promo {
-    padding-top: 56px;
-  }
-
   .main-nav--opened .promo--inner {
-    padding-top: 223px;
+    padding-top: 130px;
   }
 
-  .main-nav--nojs .main-nav__toggle,
-.main-nav--nojs .main-nav__logo {
+  .main-nav--nojs .main-nav__toggle {
     display: none;
   }
 
   .main-nav--nojs .main-nav__list {
     display: block;
+    position: absolute;
+    top: 0;
+    width: 100%;
   }
 }
 @media (min-width: 768px) {
@@ -1192,6 +1187,18 @@
 .map__wrapper {
   position: relative;
   margin-bottom: 10px;
+  min-height: 350px;
+  background-color: #eeeeee;
+  background-image: url("../img/map-mobile@1x.jpg");
+  background-size: 320px auto;
+  background-position: top center;
+  background-repeat: no-repeat;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  .map__wrapper {
+    background-image: url("../img/map-mobile@2x.jpg");
+    box-sizing: 640px auto;
+  }
 }
 .map__wrapper::before {
   content: "";
@@ -1219,39 +1226,74 @@
 @media (min-width: 768px) {
   .map__wrapper {
     margin-bottom: 0;
+    background-image: url("../img/map-tablet@1x.jpg");
+    background-size: 768px auto;
   }
+}
+@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
+  .map__wrapper {
+    background-image: url("../img/map-tablet@2x.jpg");
+    box-sizing: 1536px auto;
+  }
+}
+@media (min-width: 768px) {
   .map__wrapper::before {
     top: 164px;
   }
-
+}
+@media (min-width: 768px) {
   .map__image {
     width: 768px;
     height: 350px;
   }
 }
 @media (min-width: 1200px) {
+  .map__wrapper {
+    background-image: url("../img/map-desktop@1x.jpg");
+    background-size: 1200px auto;
+  }
+}
+@media (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 2dppx) {
+  .map__wrapper {
+    background-image: url("../img/map-desktop@2x.jpg");
+    box-sizing: 2400px auto;
+  }
+}
+@media (min-width: 1200px) {
   .map__wrapper::before {
     top: 162px;
   }
-
+}
+@media (min-width: 1200px) {
   .map__image {
     width: 1200px;
   }
 }
 .modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.modal__wrapper {
   box-sizing: border-box;
   width: 320px;
   margin-left: auto;
   margin-right: auto;
+  position: fixed;
   background-color: #ffffff;
 }
 @media (min-width: 768px) {
-  .modal {
+  .modal__wrapper {
     width: 768px;
   }
 }
 @media (min-width: 1200px) {
-  .modal {
+  .modal__wrapper {
     width: 1200px;
   }
 }
@@ -1262,48 +1304,80 @@
   margin-bottom: 0;
 }
 
-.modal--warning .modal__title {
+.modal__wrapper--warning {
+  top: 116px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.modal__wrapper--warning .modal__title {
   padding: 45px 42px 30px;
 }
-.modal--warning .modal__description {
+.modal__wrapper--warning .modal__description {
   padding: 0 42px 28px;
 }
-.modal--warning .modal__close-button {
+.modal__wrapper--warning .modal__close-button {
   width: 180px;
   margin: 0 auto;
   padding: 18px 63px 14px;
 }
 
-.modal__wrapper {
+.modal__box {
   padding: 20px;
   background-color: #f2f2f2;
 }
 
-.modal--information .modal__title {
+.modal__wrapper--information {
+  top: 402px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.modal__wrapper--information .modal__title {
   padding: 39px 38px 30px;
 }
-.modal--information .modal__description {
+.modal__wrapper--information .modal__description {
   padding: 0 38px 53px;
 }
-.modal--information .modal__close-button {
+.modal__wrapper--information .modal__close-button {
   width: 280px;
   margin: 0 auto;
   padding: 16px 60px;
 }
 
+.modal--opened {
+  display: block;
+}
+
+.modal--closed {
+  display: none;
+}
+
 @media (min-width: 768px) {
-  .modal--warning {
+  .modal__wrapper--warning {
+    top: 283px;
     width: 400px;
   }
 
-  .modal--information {
+  .modal__wrapper--information {
+    top: 162px;
     width: 640px;
   }
 }
+@media (min-width: 1200px) {
+  .modal__wrapper--warning {
+    top: 244px;
+  }
+
+  .modal__wrapper--information {
+    top: 145px;
+  }
+}
 .logo__image {
+  max-width: 100%;
+  height: auto;
   width: 185px;
   height: 96px;
   vertical-align: bottom;
+  object-fit: contain;
 }
 
 .page-header {
@@ -1330,6 +1404,10 @@
   }
 }
 
+.page-header__promo {
+  margin-top: -40px;
+}
+
 .page-header__main-nav {
   margin-bottom: 32px;
 }
@@ -1337,6 +1415,10 @@
 @media (min-width: 768px) {
   .page-header__main-nav {
     margin-bottom: 47px;
+  }
+
+  .page-header__promo {
+    margin-top: 0;
   }
 }
 @media (min-width: 1200px) {
@@ -1539,13 +1621,23 @@
 }
 .promo {
   background-color: #5496bd;
-  background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-mobile.jpg");
+  background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-mobile@1x.jpg");
   background-size: auto, cover;
-  background-position: bottom calc(0% - 1px) center, top center;
+  background-position: bottom -1px center, top center;
   background-repeat: no-repeat, no-repeat;
 }
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  .promo {
+    background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-mobile@2x.jpg");
+  }
+}
 .promo--inner {
-  background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile.jpg");
+  background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile@1x.jpg");
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  .promo--inner {
+    background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile@2x.jpg");
+  }
 }
 
 .promo__slogan-image {
@@ -1561,12 +1653,25 @@
 
 @media (min-width: 768px) {
   .promo {
-    background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-desktop.jpg");
+    background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-desktop@1x.jpg");
   }
+}
+@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
+  .promo {
+    background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-desktop@2x.jpg");
+  }
+}
+@media (min-width: 768px) {
   .promo--inner {
-    background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-desktop.jpg");
+    background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-desktop@1x.jpg");
   }
-
+}
+@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
+  .promo--inner {
+    background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-desktop@2x.jpg");
+  }
+}
+@media (min-width: 768px) {
   .promo__slogan-image {
     width: 461px;
     height: 350px;
