--- a/source/sass/blocks/benefits.scss
+++ b/source/sass/blocks/benefits.scss
@@ -66,6 +66,12 @@
 
 @media (min-width: $tablet-width) {
   .benefits {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-start: 1;
+    grid-column-end: -1;
+    row-gap: 20px;
+
     text-align: center;
     padding: 0;
     padding-top: 57px;
