--- a/7/css/style.css
+++ b/7/css/style.css
@@ -115,6 +115,11 @@
 
 @media (min-width: 768px) {
   .benefits {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-start: 1;
+    grid-column-end: -1;
+    row-gap: 20px;
     text-align: center;
     padding: 0;
     padding-top: 57px;
@@ -427,13 +432,6 @@
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 4;
-  }
-
-  .features__list-benefits {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-start: 1;
-    grid-column-end: -1;
   }
 }
 @media (min-width: 1200px) {
@@ -1785,6 +1783,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .social__item {
