Добавляет серый фон контентным изображениям на странице Каталога, редактирует поведение в потоке фотографий на Главной странице, делает единообразный фокус для интерактивных элементов, переводит высоту строк в относительные единицы измерения

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   font-family: inherit;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 1.5;
   font-weight: 400;
   text-transform: uppercase;
   cursor: pointer;
