--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -39,7 +39,7 @@
   padding: 16px;
   font-family: inherit;
   font-size: 18px;
-  line-height: 26px;
+  line-height: 1.44;
   font-weight: 700;
   text-transform: none;
 
@@ -96,7 +96,7 @@
   padding-bottom: 36px;
 
   font-size: 18px;
-  line-height: 26px;
+  line-height: 1.44;
   font-weight: 700;
   text-transform: none;
   color: $black-color;
@@ -123,7 +123,7 @@
   }
 
   .form__radio-field:focus + &::before {
-    outline: 2px solid $blue-default-color;
+    outline: 2px solid $black-color;
   }
 
   .form__radio-field:checked + &::after {
@@ -163,7 +163,7 @@
   }
 
   .form__checkbox:focus + &::before {
-    outline: 2px solid $blue-default-color;
+    outline: 2px solid $black-color;
   }
 
   .form__checkbox:checked + &::after {
