--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -46,7 +46,7 @@
   display: block;
   font-family: inherit;
   font-size: 18px;
-  line-height: 26px;
+  line-height: 1.44;
   font-weight: 700;
 
   color: $white-color;
@@ -173,7 +173,7 @@
 
   .main-nav__link {
     font-size: 14px;
-    line-height: 21px;
+    line-height: 1.5;
     font-weight: 700;
     color: $black-color;
 
