--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -14,6 +14,7 @@
 
   &--inner {
     background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile@1x.jpg");
+    background-position: bottom -1px center, top center;
 
     @media (min-resolution: $retina-dppx) {
       background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile@2x.jpg");
