--- a/source/sass/blocks/service.scss
+++ b/source/sass/blocks/service.scss
@@ -11,7 +11,7 @@
   padding: 0 30px;
 
   font-size: 21px;
-  line-height: 26px;
+  line-height: 1.24;
   font-weight: 700;
 
   color: $black-color;
@@ -29,7 +29,7 @@
   display: block;
   font-family: inherit;
   font-size: 21px;
-  line-height: 26px;
+  line-height: 1.24;
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
