--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -4,7 +4,7 @@
   border: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
-  line-height: 26px;
+  line-height: 1.24;
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
