--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -60,8 +60,8 @@
 
 .features__number,
 .features__description {
-  size: 21px;
-  line-height: 15px;
+  font-size: 14px;
+  line-height: 1.5;
 }
 
 .features__number {
@@ -145,9 +145,7 @@
     padding: 0 31px;
   }
 
-  .features__image {
-    width: 512px;
-    height: 256px;
+  .features__image-box {
     grid-column-start: 2;
     grid-column-end: -1;
     grid-row-start: 1;
@@ -159,6 +157,11 @@
       grid-row-start: 1;
       grid-row-end: 4;
     }
+  }
+
+  .features__image {
+    width: 512px;
+    height: 256px;
   }
 }
 
