--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -10,7 +10,7 @@
   margin-bottom: 33px;
 
   font-size: 21px;
-  line-height: 26px;
+  line-height: 1.24;
   font-weight: 700px;
   color: $black-color;
 }
