--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -6,7 +6,7 @@
 
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 1.5;
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
