--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -116,10 +116,6 @@
     width: 100%;
   }
 
-  .main-nav--opened .promo--inner {
-    padding-top: 130px;
-  }
-
   .main-nav--nojs .main-nav__toggle {
     display: none;
   }
@@ -129,6 +125,14 @@
     position: absolute;
     top: 0;
     width: 100%;
+  }
+
+  .main-nav--nojs .main-nav__logo {
+    padding-top: 220px;
+  }
+
+  .main-nav--nojs .promo--inner {
+    padding-top: 0;
   }
 }
 
