--- a/7/css/style.css
+++ b/7/css/style.css
@@ -15,7 +15,7 @@
   margin: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 1.5;
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
@@ -49,7 +49,7 @@
 }
 .title {
   font-size: 18px;
-  line-height: 26px;
+  line-height: 1.44;
   font-weight: 700;
   color: #000000;
 }
@@ -205,7 +205,7 @@
   border: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
-  line-height: 26px;
+  line-height: 1.24;
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
@@ -233,7 +233,7 @@
   box-sizing: border-box;
   font-family: inherit;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 1.5;
   font-weight: 400;
   text-transform: uppercase;
   cursor: pointer;
@@ -341,8 +341,8 @@
 
 .features__number,
 .features__description {
-  size: 21px;
-  line-height: 15px;
+  font-size: 14px;
+  line-height: 1.5;
 }
 
 .features__number {
@@ -419,19 +419,22 @@
     padding: 0 31px;
   }
 
-  .features__image {
-    width: 512px;
-    height: 256px;
+  .features__image-box {
     grid-column-start: 2;
     grid-column-end: -1;
     grid-row-start: 1;
     grid-row-end: 4;
   }
-  .features__image--other-order {
+  .features__image-box--other-order {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 4;
+  }
+
+  .features__image {
+    width: 512px;
+    height: 256px;
   }
 }
 @media (min-width: 1200px) {
@@ -543,7 +546,7 @@
   margin-top: 0;
   margin-bottom: 33px;
   font-size: 21px;
-  line-height: 26px;
+  line-height: 1.24;
   font-weight: 700px;
   color: #000000;
 }
@@ -629,7 +632,7 @@
   padding: 16px;
   font-family: inherit;
   font-size: 18px;
-  line-height: 26px;
+  line-height: 1.44;
   font-weight: 700;
   text-transform: none;
   width: 100%;
@@ -693,7 +696,7 @@
   margin-left: 66px;
   padding-bottom: 36px;
   font-size: 18px;
-  line-height: 26px;
+  line-height: 1.44;
   font-weight: 700;
   text-transform: none;
   color: #000000;
@@ -716,7 +719,7 @@
   background-color: #d5d5d5;
 }
 .form__radio-field:focus + .form__label-radio::before {
-  outline: 2px solid #81b3d2;
+  outline: 2px solid #000000;
 }
 .form__radio-field:checked + .form__label-radio::after {
   position: absolute;
@@ -749,7 +752,7 @@
   background-color: #d5d5d5;
 }
 .form__checkbox:focus + .form__label-checkbox::before {
-  outline: 2px solid #81b3d2;
+  outline: 2px solid #000000;
 }
 .form__checkbox:checked + .form__label-checkbox::after {
   position: absolute;
@@ -1045,7 +1048,7 @@
   display: block;
   font-family: inherit;
   font-size: 18px;
-  line-height: 26px;
+  line-height: 1.44;
   font-weight: 700;
   color: #ffffff;
   padding: 17px 0 12px;
@@ -1103,10 +1106,6 @@
     width: 100%;
   }
 
-  .main-nav--opened .promo--inner {
-    padding-top: 130px;
-  }
-
   .main-nav--nojs .main-nav__toggle {
     display: none;
   }
@@ -1116,6 +1115,14 @@
     position: absolute;
     top: 0;
     width: 100%;
+  }
+
+  .main-nav--nojs .main-nav__logo {
+    padding-top: 220px;
+  }
+
+  .main-nav--nojs .promo--inner {
+    padding-top: 0;
   }
 }
 @media (min-width: 768px) {
@@ -1156,7 +1163,7 @@
 
   .main-nav__link {
     font-size: 14px;
-    line-height: 21px;
+    line-height: 1.5;
     font-weight: 700;
     color: #000000;
   }
@@ -1471,6 +1478,7 @@
   max-width: 100%;
   height: auto;
   vertical-align: bottom;
+  background-color: #e5e5e5;
 }
 
 .photo-gallery__item-info {
@@ -1635,6 +1643,7 @@
 }
 .promo--inner {
   background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile@1x.jpg");
+  background-position: bottom -1px center, top center;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .promo--inner {
@@ -1710,7 +1719,7 @@
   margin-bottom: 24px;
   padding: 0 30px;
   font-size: 21px;
-  line-height: 26px;
+  line-height: 1.24;
   font-weight: 700;
   color: #000000;
 }
@@ -1726,7 +1735,7 @@
   display: block;
   font-family: inherit;
   font-size: 21px;
-  line-height: 26px;
+  line-height: 1.24;
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
@@ -1894,6 +1903,7 @@
   max-width: 100%;
   height: auto;
   vertical-align: bottom;
+  background-color: #e5e5e5;
 }
 
 @media (min-width: 768px) {
