--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,12 +2,13 @@
 
 .footer__wrapper {
   @include container;
-  padding: 28px 70px 23px;
+  padding: 28px 70px 23px 76px;
 }
 
 .footer__hashtag {
   margin-top: 0;
-  margin-bottom: 33px;
+  margin-bottom: 34px;
+  padding-right: 7px;
 
   font-size: 21px;
   line-height: 1.24;
@@ -18,7 +19,7 @@
 .footer__list {
   @include list-decoration;
   margin: 0 auto;
-  margin-bottom: 43px;
+  margin-bottom: 47px;
 }
 
 .footer__copyright {
