--- a/source/sass/blocks/benefits.scss
+++ b/source/sass/blocks/benefits.scss
@@ -3,7 +3,7 @@
 .benefits {
   @include list-decoration;
 
-  padding: 23px 18px 30px;
+  padding: 32px 18px 22px;
 
   text-align: left;
   color: $dark-grey-color;
@@ -12,13 +12,13 @@
 
 .benefits__item {
   position: relative;
-  padding-left: 50px;
-  margin-bottom: 22px;
+  padding-left: 44px;
+  margin-bottom: 30px;
 
   &--house::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: -6px;
     left: 0;
     width: 39px;
     height: 37px;
@@ -31,7 +31,7 @@
   &--food::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: -6px;
     left: 0;
     width: 40px;
     height: 35px;
@@ -44,8 +44,8 @@
   &--gift::before {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -7px;
+    left: 4px;
     width: 32px;
     height: 38px;
 
@@ -62,6 +62,16 @@
 
 .benefits__title {
   margin-bottom: 16px;
+}
+
+.benefits__item--house .benefits__title,
+.benefits__item--house .benefits__description {
+  padding-left: 4px;
+}
+
+.benefits__item--food .benefits__title,
+.benefits__item--food .benefits__description {
+  padding-left: 7px;
 }
 
 @media (min-width: $tablet-width) {
