--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -43,10 +43,11 @@
   }
 
   .copyright__link {
+    margin-right: 47px;
     padding: 0;
   }
 
   .copyright__icon {
-    left: 100px;
+    left: 102px;
   }
 }
