--- a/source/sass/blocks/service.scss
+++ b/source/sass/blocks/service.scss
@@ -23,6 +23,10 @@
   padding: 0 28px;
 }
 
+.service__break {
+  display: none;
+}
+
 .service__find-hotel-link {
   @include link-decoration;
 
@@ -65,14 +69,22 @@
   .service__title {
     margin-bottom: 32px;
     padding: 0 155px;
+    font-size: 30px;
+    line-height: 0.87;
   }
 
   .service__description {
-    margin-bottom: 40px;
+    margin-bottom: 43px;
     padding: 0 155px;
   }
 
+  .service__break {
+    display: block;
+  }
+
   .service__find-hotel-link {
+    padding-top: 14px;
+    padding-bottom: 18px;
     width: 458px;
   }
 }
