--- a/7/css/style.css
+++ b/7/css/style.css
@@ -59,7 +59,7 @@
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
-  padding: 23px 18px 30px;
+  padding: 32px 18px 22px;
   text-align: left;
   color: #333333;
   background-color: #ffffff;
@@ -67,13 +67,13 @@
 
 .benefits__item {
   position: relative;
-  padding-left: 50px;
-  margin-bottom: 22px;
+  padding-left: 44px;
+  margin-bottom: 30px;
 }
 .benefits__item--house::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: -6px;
   left: 0;
   width: 39px;
   height: 37px;
@@ -84,7 +84,7 @@
 .benefits__item--food::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: -6px;
   left: 0;
   width: 40px;
   height: 35px;
@@ -95,8 +95,8 @@
 .benefits__item--gift::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -7px;
+  left: 4px;
   width: 32px;
   height: 38px;
   background-image: url("../img/icon-gift.svg");
@@ -111,6 +111,16 @@
 
 .benefits__title {
   margin-bottom: 16px;
+}
+
+.benefits__item--house .benefits__title,
+.benefits__item--house .benefits__description {
+  padding-left: 4px;
+}
+
+.benefits__item--food .benefits__title,
+.benefits__item--food .benefits__description {
+  padding-left: 7px;
 }
 
 @media (min-width: 768px) {
@@ -138,7 +148,7 @@
   .benefits__item--house::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: 3px;
     left: 50%;
     transform: translateX(-50%);
     width: 75px;
@@ -154,7 +164,7 @@
   .benefits__item--food::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: 5px;
     left: 50%;
     transform: translateX(-50%);
     width: 76px;
@@ -181,8 +191,18 @@
   }
 
   .benefits__title {
+    font-size: 21px;
+    line-height: 1.24;
     margin-bottom: 26px;
     padding: 0 35px;
+  }
+
+  .benefits__item--house .benefits__title {
+    padding-left: 34px;
+  }
+
+  .benefits__item--food .benefits__title {
+    padding-left: 34px;
   }
 }
 @media (min-width: 1200px) {
@@ -239,7 +259,7 @@
   cursor: pointer;
   color: #000000;
   margin: 0;
-  margin-right: 45px;
+  margin-right: 44px;
 }
 .copyright__link[href]:hover {
   color: #81b3d2;
@@ -252,8 +272,8 @@
   max-width: 100%;
   height: auto;
   position: absolute;
-  top: -6px;
-  left: 122px;
+  top: -7px;
+  left: 120px;
   width: 27px;
   height: 34px;
   fill: currentColor;
@@ -265,11 +285,12 @@
   }
 
   .copyright__link {
+    margin-right: 47px;
     padding: 0;
   }
 
   .copyright__icon {
-    left: 100px;
+    left: 102px;
   }
 }
 .features__wrapper {
@@ -277,7 +298,7 @@
   width: 320px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 32px;
+  margin-bottom: 37px;
 }
 @media (min-width: 768px) {
   .features__wrapper {
@@ -324,7 +345,7 @@
 .features__subtitle {
   margin: 0;
   margin-bottom: 11px;
-  padding: 24px 31px 0;
+  padding: 24px 31px 0 27px;
 }
 .features__subtitle--blue-theme {
   color: inherit;
@@ -339,21 +360,44 @@
   background-color: #d6d6d6;
 }
 
-.features__number,
-.features__description {
-  font-size: 14px;
-  line-height: 1.5;
-}
-
 .features__number {
   margin-top: 0;
   margin-bottom: 17px;
-  padding: 0 31px;
+  padding: 0 31px 0 27px;
 }
 
 .features__description {
   margin: 0;
-  padding: 0 31px 24px;
+  padding: 0 31px 39px 23px;
+}
+
+.features__item--bridge .features__subtitle {
+  padding-top: 40px;
+}
+
+.features__item--bridge .features__description {
+  padding-left: 30px;
+  padding-bottom: 35px;
+}
+
+.features__item--area .features__subtitle {
+  padding-top: 26px;
+  padding-left: 28px;
+}
+
+.features__item--area .features__description {
+  padding-left: 29px;
+  padding-bottom: 24px;
+}
+
+.features__item--road .features__description {
+  padding-left: 30px;
+  padding-bottom: 27px;
+}
+
+.features__item--tourists .features__description {
+  padding-left: 32px;
+  padding-bottom: 26px;
 }
 
 .features__image {
@@ -403,20 +447,36 @@
   }
 
   .features__subtitle {
-    margin-bottom: 16px;
-    padding: 40px 36px 0;
+    font-size: 21px;
+    line-height: 1.24;
+    margin-bottom: 13px;
+    padding: 39px 36px 0;
   }
   .features__subtitle--underline::after {
     display: none;
   }
 
   .features__number {
-    margin-bottom: 26px;
+    margin-bottom: 23px;
+    padding-left: 29px;
   }
 
   .features__description {
     margin-bottom: 44px;
     padding: 0 31px;
+  }
+
+  .features__item--bridge .features__subtitle {
+    padding: 41px 53px 0;
+  }
+
+  .features__item--bridge .features__description {
+    margin-bottom: 41px;
+    padding: 0 31px 0 30px;
+  }
+
+  .features__item--tourists .features__description {
+    padding: 0 5px 0;
   }
 
   .features__image-box {
@@ -529,7 +589,7 @@
   width: 320px;
   margin-left: auto;
   margin-right: auto;
-  padding: 28px 70px 23px;
+  padding: 28px 70px 23px 76px;
 }
 @media (min-width: 768px) {
   .footer__wrapper {
@@ -544,7 +604,8 @@
 
 .footer__hashtag {
   margin-top: 0;
-  margin-bottom: 33px;
+  margin-bottom: 34px;
+  padding-right: 7px;
   font-size: 21px;
   line-height: 1.24;
   font-weight: 700px;
@@ -557,7 +618,7 @@
   margin-bottom: 0;
   padding-left: 0;
   margin: 0 auto;
-  margin-bottom: 43px;
+  margin-bottom: 47px;
 }
 
 .footer__copyright {
@@ -571,7 +632,7 @@
     justify-content: space-around;
     align-items: center;
     height: 120px;
-    padding: 36px 60px 36px 42px;
+    padding: 36px 54px 36px 60px;
   }
 
   .footer__hashtag {
@@ -977,8 +1038,8 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 0;
-  margin-bottom: 35px;
-  padding: 0 25px;
+  margin-bottom: 37px;
+  padding: 0 27px 0 25px;
 }
 @media (min-width: 768px) {
   .main__page-title {
@@ -993,8 +1054,10 @@
 
 @media (min-width: 768px) {
   .main__page-title {
-    margin-bottom: 32px;
-    padding: 0 35px;
+    margin-bottom: 31px;
+    padding: 0 35px 0 34px;
+    font-size: 21px;
+    line-height: 1.24;
   }
 }
 @media (min-width: 1200px) {
@@ -1051,7 +1114,7 @@
   line-height: 1.44;
   font-weight: 700;
   color: #ffffff;
-  padding: 17px 0 12px;
+  padding: 17px 0 13px;
 }
 .main-nav__link:hover {
   background-color: #669ec0;
@@ -1081,8 +1144,8 @@
 .main-nav--opened .main-nav__toggle::before {
   content: "";
   position: absolute;
-  top: 17px;
-  right: 20px;
+  top: 16px;
+  right: 19px;
   width: 23px;
   height: 23px;
   background-image: url("../img/icon-cross.svg");
@@ -1130,7 +1193,7 @@
     position: absolute;
     top: 0;
     left: 50%;
-    margin-left: -96px;
+    margin-left: -93px;
   }
 
   .main-nav__toggle {
@@ -1155,13 +1218,14 @@
     background-image: none;
   }
   .main-nav__item:nth-child(2) {
-    margin-right: 153px;
+    margin-right: 154px;
   }
   .main-nav__item--active .main-nav__link {
     color: #766357;
   }
 
   .main-nav__link {
+    padding: 19px 0 16px;
     font-size: 14px;
     line-height: 1.5;
     font-weight: 700;
@@ -1415,12 +1479,12 @@
 }
 
 .page-header__main-nav {
-  margin-bottom: 32px;
+  margin-bottom: 33px;
 }
 
 @media (min-width: 768px) {
   .page-header__main-nav {
-    margin-bottom: 47px;
+    margin-bottom: 48px;
   }
 
   .page-header__promo {
@@ -1655,7 +1719,7 @@
   max-width: 100%;
   height: auto;
   padding-top: 90px;
-  padding-bottom: 85px;
+  padding-bottom: 79px;
 }
 .promo__slogan-image--inner {
   padding-top: 52px;
@@ -1687,7 +1751,7 @@
     width: 461px;
     height: 350px;
     padding-top: 77px;
-    padding-bottom: 91px;
+    padding-bottom: 84px;
   }
   .promo__slogan-image--inner {
     width: 229px;
@@ -1716,7 +1780,7 @@
 
 .service__title {
   margin: 0;
-  margin-bottom: 24px;
+  margin-bottom: 22px;
   padding: 0 30px;
   font-size: 21px;
   line-height: 1.24;
@@ -1726,13 +1790,18 @@
 
 .service__description {
   margin: 0;
-  margin-bottom: 35px;
+  margin-bottom: 32px;
   padding: 0 28px;
+}
+
+.service__break {
+  display: none;
 }
 
 .service__find-hotel-link {
   text-decoration: none;
   display: block;
+  box-sizing: border-box;
   font-family: inherit;
   font-size: 21px;
   line-height: 1.24;
@@ -1766,14 +1835,22 @@
   .service__title {
     margin-bottom: 32px;
     padding: 0 155px;
+    font-size: 30px;
+    line-height: 0.87;
   }
 
   .service__description {
-    margin-bottom: 40px;
+    margin-bottom: 43px;
     padding: 0 155px;
   }
 
+  .service__break {
+    display: block;
+  }
+
   .service__find-hotel-link {
+    padding-top: 14px;
+    padding-bottom: 18px;
     width: 458px;
   }
 }
