--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -53,7 +53,8 @@
 
 @media (min-width: $desktop-width) {
   .footer__wrapper {
+    padding-top: 38px;
     padding-right: 120px;
-    padding-left: 104px;
+    padding-left: 118px;
   }
 }
