--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -14,7 +14,7 @@
 
   &--inner {
     background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile@1x.jpg");
-    background-position: bottom -1px center, top center;
+    background-position: bottom -1px center, bottom center;
 
     @media (min-resolution: $retina-dppx) {
       background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile@2x.jpg");
@@ -28,8 +28,10 @@
   padding-bottom: 79px;
 
   &--inner {
+    width: 229px;
+    height: 39px;
     padding-top: 52px;
-    padding-bottom: 67px;
+    padding-bottom: 61px;
   }
 }
 
@@ -43,6 +45,8 @@
 
     &--inner {
       background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-desktop@1x.jpg");
+      background-size: auto, auto;
+      background-position: bottom -1px center, bottom left -216px;
 
       @media (min-resolution: $retina-dppx) {
         background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-desktop@2x.jpg");
@@ -57,15 +61,22 @@
     padding-bottom: 84px;
 
     &--inner {
-      width: 229px;
-      height: 39px;
+      width: 457px;
+      height: 78px;
       padding-top: 95px;
-      padding-bottom: 117px;
+      padding-bottom: 110px;
     }
   }
 }
 
 @media (min-width: $desktop-width) {
+  .promo {
+    &--inner {
+      background-size: auto, cover;
+      background-position: bottom -1px center, bottom center;
+    }
+  }
+
   .promo__slogan-image {
     padding-top: 78px;
   }
