--- a/source/sass/blocks/video-presentation.scss
+++ b/source/sass/blocks/video-presentation.scss
@@ -12,7 +12,7 @@
 
 .video-presentation__title {
   padding: 0 27px;
-  margin-bottom: 32px;
+  margin-bottom: 27px;
 }
 
 .video-presentation__description {
@@ -36,7 +36,7 @@
     content: "";
     bottom: 60px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-16px);
     width: 48px;
     height: 54px;
     background-image: url("../img/icon-play.svg");
@@ -56,14 +56,20 @@
 }
 
 @media (min-width: $tablet-width) {
+  .video-presentation__wrapper {
+    margin-bottom: 40px;
+  }
+
   .video-presentation__title {
+    font-size: 30px;
+    line-height: 0.87;
     padding: 0 160px;
-    margin-bottom: 30px;
+    margin-bottom: 31px;
   }
 
   .video-presentation__description {
     padding: 0 160px;
-    margin-bottom: 70px;
+    margin-bottom: 90px;
   }
 
   .video-presentation__video-file {
@@ -73,6 +79,8 @@
 
   .video-presentation__button::before {
     bottom: 223px;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
