Уточняет отступы и расположение элементов на десктопной версии страницы Каталога по PixelPerfect

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -38,5 +38,9 @@
 @media (min-width: $desktop-width) {
   .page-header__main-nav {
     margin-bottom: 59px;
+
+    &--inner {
+      margin-bottom: 100px;
+    }
   }
 }
