--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -79,5 +79,10 @@
 
   .promo__slogan-image {
     padding-top: 78px;
+
+    &--inner {
+      padding-top: 100px;
+      padding-bottom: 116px;
+    }
   }
 }
