--- a/source/sass/blocks/photo-gallery.scss
+++ b/source/sass/blocks/photo-gallery.scss
@@ -164,6 +164,12 @@
     margin-bottom: 62px;
   }
 
+  .photo-gallery__description {
+    margin-bottom: 88px;
+    padding-left: 380px;
+    padding-right: 380px;
+  }
+
   .photo-gallery__item {
     position: relative;
 
