--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -18,6 +18,10 @@
   margin-bottom: 28px;
 }
 
+.feedback__form {
+  margin-bottom: 24px;
+}
+
 @media (min-width: $tablet-width) {
   .feedback__page-title,
   .feedback__description {
