--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -29,11 +29,13 @@
   }
 
   .feedback__page-title {
-    margin-bottom: 24px;
+    margin-bottom: 20px;
+    font-size: 30px;
+    line-height: 0.87;
   }
 
   .feedback__description {
-    margin-bottom: 100px;
+    margin-bottom: 105px;
   }
 }
 
