Уточняет отступы и расположение элементов на десктопной версии страницы Форм, а также для модальных окон по PixelPerfect

--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -47,9 +47,10 @@
 
   .feedback__page-title {
     margin-bottom: 32px;
+    padding-top: 14px;
   }
 
   .feedback__description {
-    margin-bottom: 56px;
+    margin-bottom: 69px;
   }
 }
