--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -28,16 +28,20 @@
   transform: translateX(-50%);
 
   & .modal__title {
-    padding: 45px 42px 30px;
+    margin-bottom: 25px;
+    padding: 45px 42px 0;
   }
 
   & .modal__description {
-    padding: 0 42px 28px;
+    margin-bottom: 28px;
+    padding: 0 42px;
   }
 
   & .modal__close-button {
     width: 180px;
-    margin: 0 auto;
+    font-size: 18px;
+    line-height: 1.44;
+    margin: 0 auto 35px;
     padding: 18px 63px 14px;
   }
 }
@@ -53,15 +57,19 @@
   transform: translateX(-50%);
 
   & .modal__title {
-    padding: 39px 38px 30px;
+    margin-bottom: 25px;
+    padding: 39px 38px 0;
   }
 
   & .modal__description {
-    padding: 0 38px 53px;
+    margin-bottom: 52px;
+    padding: 0 38px;
   }
 
   & .modal__close-button {
     width: 280px;
+    font-size: 18px;
+    line-height: 1.44;
     margin: 0 auto;
     padding: 16px 60px;
   }
@@ -79,11 +87,43 @@
   .modal__wrapper--warning {
     top: 283px;
     width: 400px;
+
+    & .modal__title {
+      font-size: 30px;
+      line-height: 1.33;
+      margin-bottom: 20px;
+      padding: 50px 80px 0;
+    }
+
+    & .modal__description {
+      margin-bottom: 48px;
+    }
+
+    & .modal__close-button {
+      width: 272px;
+      font-size: 21px;
+      line-height: 1.24;
+      margin-bottom: 48px;
+    }
   }
 
   .modal__wrapper--information {
     top: 162px;
     width: 640px;
+
+    & .modal__title {
+      font-size: 30px;
+      line-height: 0.87;
+      margin-bottom: 30px;
+      padding-top: 51px;
+    }
+
+    & .modal__close-button {
+      width: 458px;
+      font-size: 21px;
+      line-height: 1.24;
+      margin: 23px auto 25px;
+    }
   }
 }
 
