--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -13,6 +13,10 @@
   color: $dark-grey-color;
 
   background-color: $grey-form-color;
+
+  &--modal-show {
+    overflow: hidden;
+  }
 }
 
 .page__wrapper {
