--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -375,6 +375,10 @@
     padding: 0 120px 64px;
   }
 
+  .form__personal-info {
+    margin-bottom: 57px;
+  }
+
   .form__personal-info .form__box,
   .form__contact-info .form__box {
     display: flex;
@@ -382,25 +386,65 @@
     flex-wrap: nowrap;
   }
 
-  .form__personal-info .form__text-field,
-  .form__contact-info .form__text-field {
+  .form__personal-info .form__title {
+    padding-left: 48px;
+  }
+
+  .form__personal-info .form__text-field {
     width: 430px;
+  }
+
+  .form__contact-info {
+    margin-bottom: 57px;
+    padding-left: 58px;
+  }
+
+  .form__contact-info .form__title {
+    margin-left: -31px;
+  }
+
+  .form__contact-info .form__title::before {
+    left: -6px;
+  }
+
+  .form__contact-info .form__text-field {
+    width: 402px;
+  }
+
+  .form__opinion {
+    margin-bottom: 62px;
+  }
+
+  .form__opinion .form__title {
+    margin-bottom: 57px;
   }
 
   .form__opinion .form__list {
     width: 960px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
+    padding: 0 53px;
+  }
+
+  .form__checklist {
+    margin-bottom: 76px;
+  }
+
+  .form__checklist .form__title {
+    margin-bottom: 70px;
   }
 
   .form__checklist .form__list {
     width: 960px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
+    padding: 0 45px;
   }
 
   .form__comment .form__box {
@@ -410,5 +454,9 @@
 
   .form__submit-wrapper {
     width: 768px;
+  }
+
+  .form__button {
+    width: 384px;
   }
 }
